<resources>
    <string name="app_name">Gera Programas</string>

    <string name="title_activity_programa">Programa</string>
    <string name="title_activity_lista_musicas">Lista de Músicas</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="apagar_musica_titulo">Apagar música</string>
    <string name="nova_musica">Nova música</string>
    <string name="editar_musica">Editar música</string>
    <string name="apagar_musica_texto">De certeza que queres apagar esta música?</string>
    <string name="musica_definida">Não tem nenhuma música definida para esta parte</string>
    <string name="campos_obrigatorios">ERRO!!! Todos os campos são obrigatórios.</string>
    <string name="gerar_programa">Gerar Programa</string>
    <string name="gerar_programa_especial">Gerar Programa Especial</string>
    <string name="entrada">Entrada</string>
    <string name="aleluia">Aclamação</string>
    <string name="salmo">Salmo</string>
    <string name="acto_penitencial">Acto Penitencial</string>
    <string name="gloria">Glória</string>
    <string name="ofertorio">Ofertório</string>
    <string name="santo">Santo</string>
    <string name="pai_nosso">Pai-Nosso</string>
    <string name="paz">Paz</string>
    <string name="comunhao">Comunhão</string>
    <string name="accao_gracas">Acção de Graças</string>
    <string name="final_">Final</string>
    <string name="numero">Número:</string>
    <string name="nome">Nome:</string>
    <string name="ok">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="operation_title">Aviso</string>
    <string name="operation_message">Operação realizada com sucesso.</string>
    <string name="help_title">Ajuda</string>
    <string name="help_message">Para apagar uma música, clique durante algum tempo na música que deseja apagar.</string>

    <string name="nd">ND</string>

    <string-array name="parts_array">
        <item>Acto Penitencial</item>
        <item>Glória</item>
        <item>Salmo</item>
        <item>Pai-nosso</item>
        <item>Acção de Graças</item>
    </string-array>
    <string name="title_activity_nova_musica">Nova Musica</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Definições</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings_fragment">SettingsFragment</string>

    <string name="entrada_export">Entrada: %1$s\n</string>
    <string name="aleluia_export">Aclamação: %1$s\n</string>
    <string name="acto_export">Acto Penitencial: %1$s\n</string>
    <string name="gloria_export">Glória: %1$s\n</string>
    <string name="salmo_export">Salmo: %1$s\n</string>
    <string name="ofertorio_export">Ofertório: %1$s\n</string>
    <string name="santo_export">Santo: %1$s\n</string>
    <string name="pai_nosso_export">Pai-Nosso: %1$s\n</string>
    <string name="paz_export">Paz: %1$s\n</string>
    <string name="comunhao_export">Comunhão: %1$s\n</string>
    <string name="accao_export">Acção de Graças: %1$s\n</string>
    <string name="final_export">Final: %1$s\n</string>
</resources>