<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="joao.programgenerator.activities.NovaMusicaActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/numero"/>

        <EditText
            android:id="@+id/numero_musica"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nome"/>

        <EditText
            android:id="@+id/nome_musica"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_weight="0.63" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <CheckedTextView
            android:id="@+id/entrada"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/entrada"/>

        <CheckedTextView
            android:id="@+id/acto_penitencial"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/acto_penitencial"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckedTextView
            android:id="@+id/salmo"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/salmo"/>

        <CheckedTextView
            android:id="@+id/aleluia"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/aleluia"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckedTextView
            android:id="@+id/ofertorio"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/ofertorio"/>

        <CheckedTextView
            android:id="@+id/santo"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/santo"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckedTextView
            android:id="@+id/pai_nosso"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/pai_nosso"/>

        <CheckedTextView
            android:id="@+id/paz"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/paz"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckedTextView
            android:id="@+id/comunhao"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/comunhao"/>

        <CheckedTextView
            android:id="@+id/accao_gracas"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/accao_gracas"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckedTextView
            android:id="@+id/final_"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:layout_weight="1"
            android:checked="false"
            android:gravity="center"
            android:hint="@string/final_"
            android:layout_gravity="center_vertical" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ok"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancelar" />

    </LinearLayout>

</LinearLayout>
