<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:text="@string/numero"/>

            <EditText
                android:id="@+id/numero_musica"
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:layout_weight="1"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <CheckedTextView
                android:id="@+id/entrada"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:checked="false"
                android:gravity="center"
                android:hint="@string/entrada"
                android:textColorHint="#FFFFFF"/>

            <CheckedTextView
                android:id="@+id/aleluia"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:checked="false"
                android:gravity="center"
                android:hint="@string/aleluia"
                android:textColorHint="#FFFFFF"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <CheckedTextView
                android:id="@+id/acto_penitencial"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:checked="false"
                android:gravity="center"
                android:hint="@string/acto_penitencial"
                android:textColorHint="#FFFFFF"/>

            <CheckedTextView
                android:id="@+id/ofertorio"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:checked="false"
                android:gravity="center"
                android:hint="@string/ofertorio"
                android:textColorHint="#FFFFFF"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckedTextView
                android:id="@+id/santo"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:checked="false"
                android:gravity="center"
                android:hint="@string/santo"
                android:textColorHint="#FFFFFF"/>

            <CheckedTextView
                android:id="@+id/pai_nosso"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:checked="false"
                android:gravity="center"
                android:hint="@string/pai_nosso"
                android:textColorHint="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckedTextView
                android:id="@+id/paz"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:checked="false"
                android:gravity="center"
                android:hint="@string/paz"
                android:textColorHint="#FFFFFF"/>

            <CheckedTextView
                android:id="@+id/comunhao"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:checked="false"
                android:gravity="center"
                android:hint="@string/comunhao"
                android:textColorHint="#FFFFFF"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckedTextView
                android:id="@+id/accao_gracas"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:checked="false"
                android:gravity="center"
                android:hint="@string/accao_gracas"
                android:textColorHint="#FFFFFF"/>

            <CheckedTextView
                android:id="@+id/final_"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:checked="false"
                android:gravity="center"
                android:hint="@string/final_"
                android:textColorHint="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ok"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancelar" />

    </LinearLayout>


</LinearLayout>
