<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/gerar_programa"
        android:id="@+id/gerar"
        android:layout_gravity="center"
        android:layout_marginTop="95dp" />

    <Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/gerar_programa_especial"
        android:id="@+id/gerar_especial" />

    <Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_activity_lista_musicas"
        android:id="@+id/listar" />
</LinearLayout>
