<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="joao.programgenerator.activities.Programa">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/tableLayout">

        <TableRow android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/entrada"/>

            <TextView
                android:id="@+id/entrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
        </TableRow>

        <TableRow android:id="@+id/row_acto"
            android:padding="10dp">
            <TextView
                android:id="@+id/acto_penitencial_label"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/acto_penitencial"/>

            <TextView
                android:id="@+id/acto_penitencial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
        </TableRow>

        <TableRow android:id="@+id/row_salmo"
            android:padding="10dp">
            <TextView
                android:id="@+id/salmo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/salmo"/>

            <TextView
                android:id="@+id/salmo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
        </TableRow>

        <TableRow android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/aleluia"/>

            <TextView
                android:id="@+id/aleluia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
        </TableRow>

        <TableRow android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/ofertorio"/>

            <TextView
                android:id="@+id/ofertorio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
        </TableRow>

        <TableRow android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/santo"/>

            <TextView
                android:id="@+id/santo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
        </TableRow>

        <TableRow android:id="@+id/row_pai_nosso"
            android:padding="10dp">
            <TextView
                android:id="@+id/pai_nosso_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/pai_nosso"/>

            <TextView
                android:id="@+id/pai_nosso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
        </TableRow>

        <TableRow android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/paz"/>

            <TextView
                android:id="@+id/paz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
        </TableRow>

        <TableRow android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/comunhao"/>

            <TextView
                android:id="@+id/comunhao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
        </TableRow>

        <TableRow android:id="@+id/row_accao_gracas"
            android:padding="10dp">
            <TextView
                android:id="@+id/accao_gracas_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/accao_gracas"/>

            <TextView
                android:id="@+id/accao_gracas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
        </TableRow>

        <TableRow android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:textColor="#A4C739"
                android:textStyle="bold"
                android:text="@string/final_"/>

            <TextView
                android:id="@+id/last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge">
            </TextView>
         </TableRow>

        </TableLayout>



</ScrollView>
